name:                wyah
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toonn/wyah#readme
license:             BSD3
license-file:        LICENSE
author:              Toon Nolten
maintainer:          toon@nolten.sh
copyright:           2016 Toon Nolten
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wyah-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wyah
  default-language:    Haskell2010

executable calc-exe
  hs-source-dirs:      src
  main-is:             Calc.hs
  other-modules:       CalcSyntax
                     , CalcParser
                     , CalcEval
  build-depends:       base
                     , parsec
                     , mtl
                     , haskeline
  default-language:    Haskell2010

executable ulc-exe
  hs-source-dirs:      src
  main-is:             ULC.hs
  other-modules:       ULCSyntax
                     , ULCParser
                     , ULCEval
                     , ULCPretty
  build-depends:       base
                     , parsec
                     , mtl
                     , haskeline
                     , pretty
                     , containers
  default-language:    Haskell2010

executable tcalc-exe
  hs-source-dirs:      src
  main-is:             TA.hs
  other-modules:       CalcSyntax
                     , TAParser
                     , TAEval
                     , TAPretty
                     , TACheck
                     , TAType
  build-depends:       base
                     , parsec
                     , mtl
                     , haskeline
                     , pretty
  default-language:    Haskell2010

executable stlc-exe
  hs-source-dirs:      src
  main-is:             STLC.hs
  other-modules:       STLCSyntax
                     , STLCLexer
                     , STLCParser
                     , STLCCheck
                     , STLCPretty
                     , STLCEval
  build-depends:       base
                     , parsec
                     , mtl
                     , haskeline
                     , pretty
                     , containers
  default-language:    Haskell2010

test-suite wyah-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wyah
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toonn/wyah
